# x4cat

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: _config.yml  cli-reference.md  index.md  installation.md  modding-reference.md  python-api.md
docs/cli-reference/: archive-operations.md  game-data-index.md  scaffolding.md  xml-diff-patching.md
docs/modding-reference/: ai-scripts.md  build-workflow.md  catalog-system.md  common-pitfalls.md  common-recipes.md  debugging.md  extension-structure.md  file-types.md  in-game-references.md  libraries.md  localization.md  maps-components-macros.md  mission-director.md  quick-reference-links.md  signature-files.md  ui-lua-scripting.md  xml-diff-patching.md  xsd-schemas.md
docs/python-api/: archive-functions.md  conflict-detection.md  core-types.md  diff-patching.md  discovery-functions.md  index-functions.md  scaffolding-functions.md  translation-validation.md
docs/tutorials/: index.md  mod-project.md  new-equipment.md  new-ware.md  stat-mod.md
tests/: conftest.py  test_conflicts.py  test_extract_macro.py  test_index.py  test_init.py  test_inspect.py  test_scaffold.py  test_schema_extract.py  test_search.py  test_translations.py  test_validate_diff.py  test_x4_catalog.py  test_xmldiff.py
x4_catalog/: __init__.py  __main__.py  _cli.py  _conflicts.py  _core.py  _extract_macro.py  _index.py  _init.py  _inspect.py  _scaffold.py  _schema_extract.py  _schema_validate.py  _search.py  _translations.py  _types.py  _validate.py  _xml_utils.py  _xmldiff.py
