[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["x4_catalog"]

[project]
name = "x4cat"
version = "1.2.4"
description = "Linux CLI for X4: Foundations .cat/.dat archives (XRCatTool equivalent)"
requires-python = ">=3.13"
license = "MIT"
dependencies = []

[project.urls]
Repository = "https://github.com/meethune/x4cat"

[project.scripts]
x4cat = "x4_catalog:main"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.10"]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
strict = true
python_version = "3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
